--- a/production.ini
+++ b/production.ini
@@ -1,7 +1,8 @@
 [uwsgi]
-socket = ~/goldpoisk/uwsgi.sock
-processes = 1
+socket = /home/guro/goldpoisk/uwsgi.sock
+processes = 10
 threads = 10
-wsgi-file = ~/goldpoisk/myproject/goldpoisk/wsgi.py
-pythonpath = ~/goldpoisk/lib:~/goldpoisk//myproject
-logto = ~/goldpoisk/uwsgi_log
+wsgi-file = /home/guro/goldpoisk/myproject/goldpoisk/wsgi.py
+pythonpath = /home/guro/goldpoisk/lib/python2.7
+pythonpath = /home/guro/goldpoisk/myproject
+logto = /home/guro/goldpoisk/uwsgi_log
