--- a/production.ini
+++ b/production.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-socket = /home/guro/goldpoisk/uwsgi.sock
-processes = 10
-threads = 10
+socket = 127.0.0.1:3031
+processes = 3
+threads = 5
 wsgi-file = /home/guro/goldpoisk/myproject/goldpoisk/wsgi.py
 pythonpath = /home/guro/goldpoisk/lib/python2.7
 pythonpath = /home/guro/goldpoisk/myproject
