New path to logs

--- a/production.ini
+++ b/production.ini
@@ -5,4 +5,4 @@ threads = 5
 wsgi-file = /home/guro/goldpoisk/myproject/goldpoisk/wsgi.py
 pythonpath = /home/guro/goldpoisk/lib/python2.7
 pythonpath = /home/guro/goldpoisk/myproject
-logto = /home/guro/goldpoisk/uwsgi_log
+logto = /home/guro/goldpoisk/logs/uwsgi.log
